# haskell-kickstart

./: Readme.md  haskell-kickstart.cabal
doc/: notes.md
src/: Exercise00BasicFunctions.hs  Test.hs
