name:                haskell-kickstart
version:             0.1.0.0
license:             MIT
license-file:        License
author:              Michael Baker
maintainer:          michaeltbaker@gmail.com
category:            Education
build-type:          Simple
cabal-version:       >=1.8

executable test
  main-is:             Test.hs
  hs-source-dirs:      src
  build-depends:       base       == 4.6.*,
                       hspec      == 1.6.1,
                       QuickCheck == 2.6
